--- a/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
+++ b/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
@@ -2,8 +2,6 @@
 
 > **We don't use templates in Django that often now. Django is primarily used to build APIs. (DRF)**
 
-<br>
-
 **DRF: [django-rest-framework.org](https://www.django-rest-framework.org)**
 
 **Quickstart Guide: [django-rest-framework.org/tutorial/quickstart](https://www.django-rest-framework.org/tutorial/quickstart)**
@@ -84,8 +82,6 @@ RESTful APIs help build systems that are:
   }
   ```
 
-- Rules:
-
   - Keys must be **strings** (in double quotes)
   - Values can be: string, number, boolean, object, or array
 
@@ -114,6 +110,8 @@ HTTP methods define **what action** the client wants to perform on a resource:
 
 ## Creating API Views
 
+> Creating API endpoints in DRF: built `store/products` and `store/products/<id>` views with `@api_view`, added URL patterns, checked Browseable API, and enforced integer ID validation.
+
 ```py
 from django.http import HttpRequest, HttpResponse
 from rest_framework.decorators import api_view
@@ -131,6 +129,8 @@ def product_list(request: Request):
 ```
 
 ## Creating Serializers
+
+> Introduced serializers in DRF to convert model instances into JSON-ready Python dictionaries, and created a `ProductSerializer` defining selected fields (id, title, unit_price).
 
 Serializer: Converts a model instance to a dictionary.
 
@@ -153,6 +153,8 @@ Serializer fields: [django-rest-framework.org/api-guide/fields](https://www.djan
 
 ## Serializing Objects
 
+> Used `ProductSerializer` to return single/all products as JSON, handled non-existing products with `get_object_or_404`, and configured DRF to render decimals properly (`"COERCE_DECIMAL_TO_STRING": False`).
+
 Basic:
 
 ```py
@@ -163,9 +165,11 @@ def product_detail(request, id: int):
     return Response(serializer.data)  # `.data` gives us the dict (or list of dicts)
 ```
 
-Check the code in `store.views.product_detail()`, `store.views.product_list()`.
+Check the code in `store.views.product_list()`, `store.views.product_detail()`.
 
 ## Creating Custom Serializer Fields
+
+> Explained how serializers let us decouple internal models from API responses by renaming fields and adding computed fields (e.g., `price_with_tax`) using `SerializerMethodField` and `source`.
 
 Just like we can show [custom fields in admin](/Notes/Part%201/5.%20The%20Admin%20Site.md#adding-computed-columns), we can do in the API as well, in the `<ModelName>Serializer` class:
 
@@ -183,9 +187,11 @@ new_name = Serializer.<Field>(source="field_name_in_db")
 ```
 
 Why would we want to do this?  
-One use-case: internal name is changed, but if we change the external field usage name, all existing client code would break, we can avoid that using this.
+One use-case: internal name is changed, but if we change the external field usage name, all existing client code would break, we can avoid that using this. (Cool!)
 
 ## Serializing Relationships
+
+> Covered four ways to serialize relationships in DRF — primary key, string, nested object, and hyperlink — plus fixing performance with `select_related` and passing `request` in serializer context.
 
 We've many ways to serialize (and show) related fields on our API:
 
@@ -197,9 +203,9 @@ We've many ways to serialize (and show) related fields on our API:
       collection = serializers.PrimaryKeyRelatedField(queryset=Collection.objects.all())
   ```
 
-- **String** (another column of related field's table)
+- **String** (string representation (`__str__()`) of related object)
 
-  To see collection title:
+  To see collection's str repr (currently set as collection title):
 
   ```py
       collection = serializers.StringRelatedField()
@@ -233,9 +239,11 @@ We've many ways to serialize (and show) related fields on our API:
 
 ## Model Serializers
 
+> Introduced **ModelSerializers** in DRF to avoid duplication, auto-generate fields from models, override only when needed, add custom fields like `price_with_tax`, and avoid using `__all__` for security.
+
 Creating serializers [this way](/Notes/Part%202/1.%20Building%20RESTful%20APIs%20with%20Django%20REST%20Framework.md#creating-serializers) obviously breaks Django's primary principle of DRY.
 
-Correct way is using `ModelSerializer`, and use the explicit method only when specifically required, e.g., for [Creating Custom Serializer Fields](/Notes/Part%202/1.%20Building%20RESTful%20APIs%20with%20Django%20REST%20Framework.md#creating-custom-serializer-fields).
+Correct way is using `ModelSerializer`, and use the explicit method only when specifically required, e.g., for [creating custom serializer fields](/Notes/Part%202/1.%20Building%20RESTful%20APIs%20with%20Django%20REST%20Framework.md#creating-custom-serializer-fields). (Or when our API doesn't have DB models.)
 
 ```py
 class ProductSerializer(serializers.ModelSerializer):
@@ -256,6 +264,8 @@ class ProductSerializer(serializers.ModelSerializer):
 
 ## Deserializing Objects
 
+> Explained **deserialization** in DRF by handling POST requests, passing `request.data` into the serializer, and preparing for validation before saving objects to the database.
+
 Deserialize: Get model object from a `dict` received in `request.data`.
 
 Usage: E.g., when using `POST`, we receive the data from the client.
@@ -268,6 +278,8 @@ Check the code in `store.views.product_list()`.
 
 ## Data Validation
 
+> Covered **data validation** in DRF: using `is_valid()` or `raise_exception=True`, accessing `validated_data`, handling field/object-level validation, and returning proper 400 responses with errors.
+
 Check the code in `store.views.product_list()`.
 
 - `request.data` == `serializer.initial_data`: Actual `dict` came with `POST`.
@@ -279,7 +291,7 @@ Check the code in `store.views.product_list()`.
 ### Customizing Validations
 
 Suppose we want `password` field to match `confirm_password` field. If not matched, then the data is invalid.  
-We can override `validate` method in `<ModelName>Serializer` class:
+We can override `validate` method in the serializer:
 
 ```py
 def validate(self, data):
@@ -288,20 +300,18 @@ def validate(self, data):
     return data
 ```
 
-[Writing custom validators](https://www.django-rest-framework.org/api-guide/validators/#writing-custom-validators)
+[django-rest-framework.org/api-guide/serializers/#validation](https://www.django-rest-framework.org/api-guide/serializers/#validation)
 
-- [Field-level validation](https://www.django-rest-framework.org/api-guide/validators/#field-level-validation)
-
-[Validation](https://www.django-rest-framework.org/api-guide/serializers/#validation)
-
-- [Object-level validation](https://www.django-rest-framework.org/api-guide/serializers/#object-level-validation)
+[django-rest-framework.org/api-guide/validators/#writing-custom-validators](https://www.django-rest-framework.org/api-guide/validators/#writing-custom-validators)
 
 ## Saving Objects
 
+> Explained how to **save and update data** in DRF using `serializer.save()`, customizing `create`/`update` if needed, handling PUT/PATCH requests, and following REST conventions (returning created/updated objects with proper status codes).
+
 `PUT` vs `PATCH`:
 
-- https://g.co/gemini/share/14197b18ee01
-- https://www.perplexity.ai/search/put-vs-patch-SbtTvJ71RIOVmx4V5Ak_8A
+- [Gemini](https://g.co/gemini/share/14197b18ee01)
+- [Perplexity](https://www.perplexity.ai/search/put-vs-patch-SbtTvJ71RIOVmx4V5Ak_8A)
 
 ### Saving
 
@@ -323,12 +333,12 @@ def validate(self, data):
 
 ### Overriding `create()` / `update()`
 
-If we want to change the default `create()` / `update()` to include some other things, we can:
+If we want to change the default `create()` / `update()` to include some other things, we can. In serializer:
 
 ```py
 def create(self, validated_data):
     product = Product(**validated_data)
-    product.other = 1
+    product.something = 1
     product.save()
     return product
 
@@ -339,6 +349,8 @@ def update(self, instance, validated_data):
 ```
 
 ## Deleting Objects
+
+> Covered **deleting products** in DRF: implementing DELETE with 204 No Content, handling foreign key constraints gracefully (e.g., return 405 with error message if product is linked to orders).
 
 To delete a product:
 
@@ -352,6 +364,8 @@ To delete a product:
         return Response(status=status.HTTP_204_NO_CONTENT)
 ```
 
+See `store.views.product_detail()` for complete code.
+
 ### Which status code to return?
 
 Refer:
@@ -360,6 +374,8 @@ Refer:
 - [httpstatuses.io](https://httpstatuses.io)
 
 ## Exercise: Building the Collections API
+
+> Implemented **collections endpoint**: list/create collections with annotated product counts, retrieve/update/delete individual collections (with delete blocked if products exist), and updated related names/serializer fields accordingly.
 
 Similar as above implementation, only differences to add a read-only `product_count` field to the API:
 
@@ -371,7 +387,7 @@ Similar as above implementation, only differences to add a read-only `product_co
        # `read_only=True`: Restrict adding/changing while `POST`/`PUT`/`PATCH`.
    ```
 
-   [Specifying read only fields](https://www.django-rest-framework.org/api-guide/serializers/#specifying-read-only-fields)
+   [django-rest-framework.org/api-guide/serializers/#specifying-read-only-fields](https://www.django-rest-framework.org/api-guide/serializers/#specifying-read-only-fields)
 
 2. In views:
 
