--- a/Notes/Part 1/3. Setting Up the Database.md
+++ b/Notes/Part 1/3. Setting Up the Database.md
@@ -160,7 +160,7 @@ In DataGrip:
 3. Connect to the local DB server using server details/credentials
 4. Create a new DB
 
-For just reading the data, use VS Code extension [SQL Tools](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools), which works well! (Doesn't support modifying.)  
+For small/basic tasks, just use VS Code extension [SQL Tools](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools), which works well!  
 Requires: VS Code extension [SQLTools PostgreSQL Driver](https://marketplace.visualstudio.com/items?itemName=mtxr.sqltools-driver-pg)
 
 ## Using ~~MySQL~~ PostgreSQL in Django
