--- a/Notes/Part 2/2. Advanced API Concepts.md
+++ b/Notes/Part 2/2. Advanced API Concepts.md
@@ -1,5 +1,7 @@
 ## Class-based Views
 
+> Introduced **class-based views in DRF**: converting function-based views to `APIView` classes with `get`, `post`, `put`, `delete` methods, using `as_view()` in URLs, and showing benefits like cleaner code and OOP features.
+
 Changing Function-based Views to Class-based Views.
 
 We just need to convert the function to a class and move the code inside `if` blocks into respective methods of that class.
@@ -18,6 +20,8 @@ class ProductList(APIView):
 
 ## Mixins
 
+> Introduced **DRF mixins** (`ListModelMixin`, `CreateModelMixin`, etc.) to reuse common patterns like listing, creating, updating, and deleting resources instead of repeating code in class-based views.
+
 [django-rest-framework.org/api-guide/generic-views/#mixins](https://www.django-rest-framework.org/api-guide/generic-views/#mixins)
 
 - ListModelMixin
@@ -26,37 +30,45 @@ class ProductList(APIView):
 - UpdateModelMixin
 - DestroyModelMixin
 
+[Usage from next lecture.]
+
 ## Generic Views
 
-Instead of directly using the above mixins, we can use [Concrete View Classes](https://www.django-rest-framework.org/api-guide/generic-views/#concrete-view-classes), which combine one or more mixins.
+> Explained **generic views in DRF**: concrete classes combining mixins (e.g., `ListCreateAPIView`, `RetrieveUpdateDestroyAPIView`) that reduce boilerplate by using `queryset` and `serializer_class` attributes, support overrides when needed, and simplify code while adding features like built-in forms in the browsable API.
+
+Instead of directly using the above mixins, we can use [Concrete View Classes](https://www.django-rest-framework.org/api-guide/generic-views/#concrete-view-classes), which combine one or more mixins. (Though we can also use the individual mixins directly when a concrete view class combined of required mixins is not there, see [Creating a Cart](/Notes/Part%202/3.%20Designing%20and%20Implementing%20a%20Shopping%20Cart%20API.md#creating-a-cart).)
 
 E.g.:
 
 ```py
-# Generic (`rest_framework.generics`) View:
+# Generic View:
 class ProductList(ListCreateAPIView):
 
     queryset = Product.objects.all()
     serializer_class = ProductSerializer
 
-    # Or we can use methods instead of above if we've some more logic or anything other than just a simple expression.
+    # Or we can use methods instead of above if we've some more logic or anything other than just a simple expression:
     # def get_queryset(self):
     #     return Product.objects.all()
     # def get_serializer_class(self):
     #     return ProductSerializer
 ```
 
-Using Generic Views, code is much cleaner now, follows DRY, and also adds functionality like a form to POST data on the browsable API.
+Using Generic Views, code is much cleaner now, follows DRY, and also adds functionality like a `HTML form` with individual fields to POST data (alongside the existing `Raw data` form with a single `Content` field) on the browsable API.
 
 ## Customizing Generic Views
 
-We can inherit the class from the respective generic view and then override any method we want to.
+> Showed how to **customize DRF generic views** (e.g., `RetrieveUpdateDestroyAPIView`) by overriding methods like `delete` for app-specific logic, and explained handling `pk` vs `id` in URL patterns with `lookup_field`.
 
-See `store.views.ProductDetail`, `store.views.CollectionDetail`.
+See `store.views.ProductDetail(RetrieveUpdateDestroyAPIView)`, `store.views.CollectionDetail(RetrieveUpdateDestroyAPIView)`.
+
+Since we used `product = models.ForeignKey(to=Product, on_delete=models.PROTECT)` in `store.models.OrderItem`, if we don't explicitly prevent the deletion, our app would break because of `ProtectedError`. (Comment out the overridden `delete` and test.)
 
 Read: [django-rest-framework.org/api-guide/generic-views/#examples](https://www.django-rest-framework.org/api-guide/generic-views/#examples)
 
 ## ViewSets
+
+> Introduced **ViewSets** (`ModelViewSet` / `ReadOnlyModelViewSet`) to combine multiple related views (list, create, retrieve, update, delete) into a single class, reducing duplication.
 
 If we have a situation like this:
 
@@ -72,11 +84,9 @@ class ProductDetail(RetrieveUpdateDestroyAPIView):
     serializer_class = ProductSerializer
 
     def delete(self, request, pk):
-        product = get_object_or_404(Product, pk=pk)
-        if product.orderitem_set.exists():  # custom behavior
+        if OrderItem.objects.filter(product_id=pk).exists():
             return Response(status=status.HTTP_409_CONFLICT)
-        product.delete()
-        return Response(status=status.HTTP_204_NO_CONTENT)
+        return super().delete(request, pk)
 ```
 
 We should instead just use the cleaner `ModelViewSet`:
@@ -87,17 +97,28 @@ class ProductViewSet(ModelViewSet):
     queryset = Product.objects.all()
     serializer_class = ProductSerializer
 
-    def destroy(self, request, *args, **kwargs):
-        if OrderItem.objects.filter(product_id=kwargs["pk"]).exists():  # custom behavior
+    def destroy(self, request, pk):
+        if OrderItem.objects.filter(product_id=pk).exists():
             return Response(status=status.HTTP_409_CONFLICT)
-        return super().destroy(request, *args, **kwargs)
+        return super().destroy(request, pk)
 ```
 
-> If we want read-only behavior, we can use `ReadOnlyModelViewSet`.
+If we want read-only behavior, we can use `ReadOnlyModelViewSet`.
 
 ViewSets: [django-rest-framework.org/api-guide/viewsets](https://www.django-rest-framework.org/api-guide/viewsets)
 
+> There are two main advantages of using a `ViewSet` class over using a `View` class.
+>
+> - Repeated logic can be combined into a single class. In the above example, we only need to specify the `queryset` once, and it'll be used across multiple views.
+> - By using routers, we no longer need to deal with wiring up the URL conf ourselves.
+>
+> Both of these come with a trade-off. Using regular views and URL confs is more explicit and gives you more control. ViewSets are helpful if you want to get up and running quickly, or when you have a large API and you want to enforce a consistent URL configuration throughout.
+>
+> \- [django-rest-framework.org/api-guide/viewsets/#example](https://www.django-rest-framework.org/api-guide/viewsets/#example)
+
 ## Routers
+
+> Explained **routers** (`SimpleRouter` / `DefaultRouter`) to auto-generate URL patterns for viewsets, with `DefaultRouter` adding an API root page and `.json` responses.
 
 With viewsets, we use [Routers](https://www.django-rest-framework.org/api-guide/routers) to map the urls.
 
@@ -118,41 +139,36 @@ Use [`DefaultRouter`](https://www.django-rest-framework.org/api-guide/routers/#d
 1. "API Root" endpoint e.g. [/store](http://127.0.0.1:8000/store)
 2. For directly getting JSON data from any endpoint we had option to add `?format=json` (e.g. `/store/products?format=json`), now we can also do `.json` (e.g. `/store/products.json`)
 
-##
+## Building the Reviews API
 
-> There are two main advantages of using a `ViewSet` class over using a `View` class.
->
-> - Repeated logic can be combined into a single class. In the above example, we only need to specify the `queryset` once, and it'll be used across multiple views.
-> - By using routers, we no longer need to deal with wiring up the URL conf ourselves.
->
-> Both of these come with a trade-off. Using regular views and URL confs is more explicit and gives you more control. ViewSets are helpful if you want to get up and running quickly, or when you have a large API and you want to enforce a consistent URL configuration throughout.
->
-> \- [django-rest-framework.org/api-guide/viewsets/#example](https://www.django-rest-framework.org/api-guide/viewsets/#example)
+> Created the **Review model, serializer, and viewset** to enable product reviews, preparing for integration with **nested routers**.
 
-## Building the Reviews API + Nested Routers
+### [Remember?] Basic steps for making a REST API:
 
-### [For Revision] Basic steps for making a REST API:
-
-> BUILDING THE MODEL
+**BUILDING THE MODEL**
 
 1. Create a model class
-2. Create a migration
-3. Apply the migration
+2. Make & apply migrations
 
-> BUILDING THE API
+**BUILDING THE API**
 
-4. Create a serializer
-5. Create a view
-6. Register a route
+3. Create a serializer
+4. Create a view
+5. Register a route
 
-<br>
+## Nested Routers
+
+> Implemented **nested routers with DRF-Nested-Routers** for products and reviews, passing product ID via context and overriding `get_queryset` & `create` to properly filter and assign reviews to products.
 
 **IMP:** See the code in `store.serializers.ReviewSerializer`, `store.views.ReviewViewSet` for:
 
 1. Dynamic fetching of reviews based on current product id using `get_queryset`
 2. On creation of a review, auto-adding of current product (which is a related field) based on the endpoint, using `get_serializer_context`, `create`
 
-DRF Nested Routers: [django-rest-framework.org/api-guide/routers/#drf-nested-routers](https://www.django-rest-framework.org/api-guide/routers/#drf-nested-routers) > [github.com/alanjds/drf-nested-routers](https://github.com/alanjds/drf-nested-routers)
+**Note:** Not sure what's the reason but Mosh taught the wrong way, we should not repeat the logic in the overridden method.  
+**Read Gemini:** [1](https://g.co/gemini/share/4bfcb96cc571), [2](https://g.co/gemini/share/bd09cdc28393)
+
+**DRF Nested Routers:** [django-rest-framework.org/api-guide/routers/#drf-nested-routers](https://www.django-rest-framework.org/api-guide/routers/#drf-nested-routers) > [github.com/alanjds/drf-nested-routers](https://github.com/alanjds/drf-nested-routers)
 
 ```sh
 pipenv install drf-nested-routers
@@ -160,11 +176,13 @@ pipenv install drf-nested-routers
 
 ## Filtering
 
+> Implemented **filtering products by collection ID** using `get_queryset()` with `request.query_params.get()`, and fixed base name issues by explicitly setting `basename` in the router.
+
 We can do three types of [Filtering](https://www.django-rest-framework.org/api-guide/filtering/#filtering):
 
-- Filtering against the current user
-- Filtering against the URL
-- Filtering against query parameters
+- Filtering against the current user (see `store.views.OrderViewSet.get_queryset`)
+- Filtering against the URL (see `store.views.ReviewViewSet.get_queryset`)
+- Filtering against query parameters (see below)
 
 E.g., in `ProductViewSet`, we can do:
 
@@ -177,6 +195,8 @@ E.g., in `ProductViewSet`, we can do:
 ```
 
 ## Generic Filtering
+
+> Implemented **generic filtering with Django-Filter**, including custom filters (e.g., unit price range), by creating a `ProductFilter` class and connecting it via `filterset_class` in the viewset.
 
 [django-rest-framework.org/api-guide/filtering/#generic-filtering](https://www.django-rest-framework.org/api-guide/filtering/#generic-filtering)
 
@@ -208,14 +228,16 @@ E.g., in `ProductViewSet`, we can do:
 >
 > \- [django-rest-framework.org/api-guide/filtering/#djangofilterbackend](https://www.django-rest-framework.org/api-guide/filtering/#djangofilterbackend)
 
-1. Define `<Model>Filter` in a new `filters.py`. (Check `store.filters.ProductFilter`.)
+1. Define `<Model>Filter` class in a new `filters.py`. (Check `store.filters.ProductFilter`.)
 
 2. Replace `filterset_fields = [...]` with `filterset_class = <Model>Filter`.
 
-This adds query params functionality (with GUI), e.g.:  
+This adds query params functionality (with a nice GUI button), e.g.:  
 `/store/products/?collection_id=3&unit_price__gt=95&unit_price__lt=100`
 
 ## Searching
+
+> Implemented **searching with DRF’s `SearchFilter`**, allowing case-insensitive keyword search on fields like `title` and `description` (with support for multiple terms). Parameter name: `search`.
 
 1. Add `"rest_framework.filters.SearchFilter"` to `settings.REST_FRAMEWORK."DEFAULT_FILTER_BACKENDS"`.
 
@@ -223,18 +245,22 @@ This adds query params functionality (with GUI), e.g.:
 
 Notes:
 
-- We can also use related fields using the good ol' d-under method, e.g. `"collection__title"`.
+- We can also use related fields using the good ol' field lookup, e.g. `"collection__title"`.
 - By default, it's case-insensitive.
 
 Read all details: [django-rest-framework.org/api-guide/filtering/#searchfilter](https://www.django-rest-framework.org/api-guide/filtering/#searchfilter)
 
 ## Sorting
 
+> Implemented **sorting with DRF’s `OrderingFilter`**, enabling ascending/descending and multi-field ordering (e.g., `unit_price`, `last_update`) via the `ordering` query parameter.
+
 [django-rest-framework.org/api-guide/filtering/#orderingfilter](https://www.django-rest-framework.org/api-guide/filtering/#orderingfilter)
 
 (Same steps as [Searching](#searching). Read from above doc link.)
 
 ## Pagination
+
+> Implemented **pagination** using `PageNumberPagination` (with global or per-view settings), explored `LimitOffsetPagination`, and created a custom `DefaultPagination` class to set page size cleanly.
 
 [django-rest-framework.org/api-guide/pagination/#pagination](https://www.django-rest-framework.org/api-guide/pagination)
 
